--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ lib/extensions/_extensions.scss
 .DS_Store
 .start.pid
 .port.tmp
-public
+public/stylesheets/*
 node_modules/*
 .tmuxp.*
 package-lock.json
